--- a/demo/index.html
+++ b/demo/index.html
@@ -78,6 +78,11 @@
         <gig-input type="tags" name="tags" class="input" placeholder="Escribe una etiqueta" value="Prueba,hola" required></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input with keyboard</label>
+        <gig-input type="text" name="tags" keyboard="9,a,*,-,.,[,]" ></gig-input>
+    </div>
+
 </body>
 
 </html>
