--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Gig Component fieldMap Demo</title>
-    <link rel="import" href="/src/gig-input.html">
-
+    <link rel="import" href="../src/gig-input.html">
     <style is="custom-style">
         .field {
             position:relative;
@@ -20,13 +19,9 @@
             display: block;
             margin: 0 0 5px 0;
         }
-
-
     </style>
 </head>
 <body>
-
-
     <div class="field">
         <label>Input standard</label>
         <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23" required></gig-input>
