refactor(component): gig-input-date-behavior: declare forgotten var

--- a/src/gig-input-date-behavior.html
+++ b/src/gig-input-date-behavior.html
@@ -8,7 +8,7 @@
 <script>
     GigInputDateBehavior = {
         enableDate: function() {
-            self = this;
+            var self = this;
 
             if (this.type == 'datetime') {
                 this.showTime = true;
