--- a/src/gig-input-date-behavior.html
+++ b/src/gig-input-date-behavior.html
@@ -10,11 +10,7 @@
         enableDate: function() {
             var self = this;
 
-            if (this.type == 'datetime') {
-                this.showTime = true;
-            } else {
-                this.showTime = false;
-            }
+            this.showTime = (this.type == 'datetime');
 
             moment.locale(self.lang);
 
