--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -382,6 +382,26 @@
                         notify: true,
                         reflectToAttribute: true
                     },
+                    autocomplete: {
+                        type: String,
+                        value: 'off'
+                    },
+                    placeholder: {
+                        type: String,
+                        value: ''
+                    },
+                    min: {
+                        type: String
+                    },
+                    max: {
+                        type: String
+                    },
+                    errorMessage: {
+                        type: String
+                    },
+                    step: {
+                        type: String
+                    },
                     value: {
                         type: String,
                         value: '',
