chore(bower): update deps

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,38 +23,38 @@
 </head>
 <body>
     <div class="field">
-        <label>Input standard</label>
-        <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23" required></gig-input>
+        <label>Input type text - simple text field</label>
+        <gig-input type="text" class="input" placeholder="Write something" maxlength="23" required></gig-input>
     </div>
 
     <div class="field">
-        <label>Input with date</label>
-        <gig-input type="datetime" class="input" placeholder="Inserta una fecha" maxlength="23" required button-icon="fa-calendar"></gig-input>
+        <label>Input type date</label>
+        <gig-input type="datetime" class="input" placeholder="Choose a date" maxlength="23" required button-icon="fa-calendar"></gig-input>
     </div>
 
     <div class="field">
-        <label>Input with icon</label>
-        <gig-input type="text" class="input" placeholder="Escribe un texto" required icon="fa-download"></gig-input>
+        <label>Input type text with an icon addon</label>
+        <gig-input type="text" class="input" placeholder="Write something" required icon="fa-download"></gig-input>
     </div>
 
     <div class="field">
-        <label>Input group</label>
-        <gig-input type="url" class="input" placeholder="Escribe una url" required group="http://"></gig-input>
+        <label>Input type url - group</label>
+        <gig-input type="url" class="input" placeholder="Write an url" required group="http://"></gig-input>
     </div>
 
     <div class="field">
-        <label>Input color</label>
-        <gig-input type="color" name="dos" class="input" placeholder="Elige un color" required></gig-input>
+        <label>Input type color</label>
+        <gig-input type="color" name="dos" class="input" placeholder="Choos a color from the color picker" required></gig-input>
     </div>
 
     <div class="field">
-        <label>Input slug</label>
-        <gig-input type="slug" name="slug" class="input" placeholder="Escribe un slug" required></gig-input>
+        <label>Input type slug</label>
+        <gig-input type="slug" name="slug" class="input" placeholder="Write a slug" required></gig-input>
     </div>
 
     <div class="field">
-        <label>Input domain</label>
-        <gig-input type="domain" name="domain" class="input" placeholder="Escribe un dominio" required></gig-input>
+        <label>Input type domain</label>
+        <gig-input type="domain" name="domain" class="input" placeholder="Write a domain" required></gig-input>
     </div>
 
     <div class="field">
