refactor(test): passing lint-polymer

--- a/gig-input-color-behavior.html
+++ b/gig-input-color-behavior.html
@@ -81,6 +81,10 @@
 </style>
 
 <script>
+    /**
+    * description
+    * @polymerBehavior GigInputDateBehavior
+    */
     GigInputColorBehavior = {
         enableColor: function() {
             var self = this;
