--- a/src/gig-input-color-behavior.html
+++ b/src/gig-input-color-behavior.html
@@ -73,6 +73,10 @@
 </style>
 
 <script>
+    /**
+    * description
+    * @polymerBehavior GigInputDateBehavior
+    */
     GigInputColorBehavior = {
         enableColor: function() {
             var self = this;
