--- a/src/gig-input-color-behavior.html
+++ b/src/gig-input-color-behavior.html
@@ -1,95 +1,108 @@
 <script src="colorpicker.js"></script>
 
 <style>
-    .picker-wrapper,
-    .slide-wrapper {
-        position: relative;
-        float: left;
-    }
-    .picker-indicator,
-    .slide-indicator {
-        position: absolute;
-        left: 0;
-        top: 0;
-        pointer-events: none;
-    }
-    .picker,
-    .slide {
-        cursor: crosshair;
-        float: left;
-    }
+  .picker-wrapper,
+  .slide-wrapper {
+    position: relative;
+    float: left;
+  }
 
-    .cp-default {
-        background-color: white;
-        border: 1px solid #e4eaec;
-        padding: 7px;
-        margin-top: 5px;
-        box-shadow: 0 3px 12px rgba(0,0,0,.05);
-        border-radius: 3px;
-        position:absolute;
-        z-index: 100000;
-    }
-    .cp-default .picker {
-        width: 150px;
-        height: 150px;
-    }
-    .cp-default .slide {
-        width: 30px;
-        height: 150px;
-        margin-left: 5px;
-    }
-    .cp-default .slide-wrapper {
-        margin-left: 10px;
-    }
-    .cp-default .picker-indicator {
-        width: 5px;
-        height: 5px;
-        border: 2px solid darkblue;
-        -moz-border-radius: 4px;
-        -o-border-radius: 4px;
-        -webkit-border-radius: 4px;
-        border-radius: 4px;
-        opacity: .5;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
-        filter: alpha(opacity=50);
-        background-color: white;
-    }
-    .cp-default .slide-indicator {
-        width: 100%;
-        height: 10px;
-        left: -4px;
-        opacity: .6;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-        filter: alpha(opacity=60);
-        border: 4px solid lightblue;
-        -moz-border-radius: 4px;
-        -o-border-radius: 4px;
-        -webkit-border-radius: 4px;
-        border-radius: 4px;
-        background-color: white;
-    }
+  .picker-indicator,
+  .slide-indicator {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+  }
+
+  .picker,
+  .slide {
+    cursor: crosshair;
+    float: left;
+  }
+
+  .cp-default {
+    background-color: white;
+    border: 1px solid #e4eaec;
+    padding: 7px;
+    margin-top: 5px;
+    box-shadow: 0 3px 12px rgba(0, 0, 0, .05);
+    border-radius: 3px;
+    position: absolute;
+    z-index: 100000;
+  }
+
+  .cp-default .picker {
+    width: 150px;
+    height: 150px;
+  }
+
+  .cp-default .slide {
+    width: 30px;
+    height: 150px;
+    margin-left: 5px;
+  }
+
+  .cp-default .slide-wrapper {
+    margin-left: 10px;
+  }
+
+  .cp-default .picker-indicator {
+    width: 5px;
+    height: 5px;
+    border: 2px solid darkblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    opacity: .5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    filter: alpha(opacity=50);
+    background-color: white;
+  }
+
+  .cp-default .slide-indicator {
+    width: 100%;
+    height: 10px;
+    left: -4px;
+    opacity: .6;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+    filter: alpha(opacity=60);
+    border: 4px solid lightblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: white;
+  }
 </style>
 
 <script>
-    /**
-    * description
-    * @polymerBehavior GigInputDateBehavior
-    */
-    GigInputColorBehavior = {
-        enableColor: function() {
-            var self = this;
-            ColorPicker(
-                this.querySelector('.slide'),
-                this.querySelector('.picker'),
-                function(hex, hsv, rgb) {
-                    self.value = hex;
-                }
-            );
-        },
-        hideColor: function() {
-            this.showColor = false;
+  /**
+   * description
+   * @polymerBehavior GigInputDateBehavior
+   */
+  GigInputColorBehavior = {
+    enableColor: function() {
+      var self = this;
+      console.log('ENABLE COLOR', self.value);
+      ColorPicker(
+        this.querySelector('.slide'),
+        this.querySelector('.picker'),
+        function(hex, hsv, rgb) {
+          self.value = hex;
         }
+      );
+      this.showColor = true;
+    },
+    /**
+     * Does not work
+     * @param e
+       */
+    hideColor: function(e) {
+      this.showColor = false;
     }
+  }
 </script>
