--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -117,11 +117,7 @@
           Polymer.IronValidatableBehavior
         ],
         listeners: {
-          'input': '_onInput',
-          'click': 'hideColor'
-        },
-        hideColor: function(e) {
-          this.showColor = !this.showColor;
+          'input': '_onInput'
         },
         _onInput: function() {
 
