--- a/gig-input.html
+++ b/gig-input.html
@@ -1,6 +1,6 @@
 <!--
  Gigigo Webcomponent to manage input
- @version v0.2.6 - 2016-08-02
+ @version v0.2.7 - 2016-08-24
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -14,6 +14,8 @@
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+
+<script src="../validator-js/validator.min.js"></script>
 
 <link rel="import" href="gig-input-style.html">
 
@@ -243,17 +245,19 @@
           this.keyboardShow = false;
         },
         validateDomain: function(value) {
-          if (/\b((xn--)?[a-z0-9]+(-[a-z0-9]+)*\.)+[a-z]{2,}\b/.test(value)) {
+          //if (/\b((xn--)?[a-z0-9]+(-[a-z0-9]+)*\.)+[a-z]{2,}\b/.test(value)) {
+          if (validator.isFQDN(value)) {
             this.errorMessage = null;
             return true;
           } else {
             this.invalid = true;
-            this.errorMessage = 'Invalid Domain';
+            this.errorMessage = 'Invalid Domain root';
             return false;
           }
         },
         validateEmail: function(value) {
-          if (/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i.test(value)) {
+          //if (/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i.test(value)) {
+          if(validator.isEmail(value)) {
             this.errorMessage = null;
             return true;
           } else {
