--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -243,7 +243,7 @@
             return true;
           } else {
             this.invalid = true;
-            this.errorMessage = 'Invalid Domain root';
+            this.errorMessage = 'Invalid Domain';
             return false;
           }
         },
