--- a/gig-input.html
+++ b/gig-input.html
@@ -1,6 +1,6 @@
 <!--
  Gigigo Webcomponent to manage input
- @version v0.2.7 - 2016-08-24
+ @version v0.2.8 - 2016-08-24
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -251,7 +251,7 @@
             return true;
           } else {
             this.invalid = true;
-            this.errorMessage = 'Invalid Domain root';
+            this.errorMessage = 'Invalid Domain';
             return false;
           }
         },
